--- a/options.conf
+++ b/options.conf
@@ -8,7 +8,7 @@ giturl = https://github.com/bear/parsedatetime.git
 # build 32 bit libraries
 32bit = false
 # allow package to build with test failures
-allow_test_failures = false
+allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
