--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/5f/19/43357ced106dd1ab6bceb1decb86
 archives = 
 giturl = https://github.com/bear/parsedatetime.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
